--- a/index.html
+++ b/index.html
@@ -4,15 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Discover Cloud — Infraestrutura em Nuvem Premium</title>
-    <meta
-        name="description"
-        content="Descubra uma plataforma cloud enterprise com segurança, escalabilidade e suporte 24/7 para acelerar seus produtos digitais."
-    />
 
     <meta property="og:title" content="Discover Cloud — Infraestrutura em Nuvem Premium" />
     <meta property="og:description" content="Hospede aplicações com máxima performance, segurança empresarial e experiência impecável. Planos flexíveis com suporte 24/7." />
-    <meta property="og:image" content="https://compared-reactions-took-rangers.trycloudflare.com/banner.png" />
-    <meta property="og:url" content="https://compared-reactions-took-rangers.trycloudflare.com/" />
+    <meta property="og:image" content="https://neither-rescue-feature-tremendous.trycloudflare.com/banner.png" />
+    <meta property="og:url" content="https://neither-rescue-feature-tremendous.trycloudflare.com/" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image:alt" content="Discover Cloud - Hospedagem Profissional na Nuvem" />
 
@@ -945,7 +941,7 @@
     <header>
         <div class="container nav">
             <a class="brand" href="#topo">
-                <img src="https://compared-reactions-took-rangers.trycloudflare.com/logo.png" alt="Discover Cloud" />
+                <img src="https://i.ibb.co/21HWwywW/Gemini-Generated-Image-47non947non947no.png" alt="Discover Cloud" />
                 Discover Cloud
             </a>
             <nav>
@@ -957,7 +953,7 @@
                     <li><a href="#contato">Contato</a></li>
                 </ul>
             </nav>
-            <a class="btn-ghost" href="https://compared-reactions-took-rangers.trycloudflare.com/">Acessar Painel</a>
+            <a class="btn-ghost" href="https://neither-rescue-feature-tremendous.trycloudflare.com/">Acessar Painel</a>
         </div>
     </header>
 
@@ -969,7 +965,7 @@
                     <h1 class="hero-headline">Infraestrutura em nuvem <span>feita para crescer</span> com o seu negócio</h1>
                     <p class="hero-subtitle">A Discover Cloud entrega ambientes de produção em minutos, com observabilidade integrada, zero downtime e suporte humano 24/7. Conquiste escalabilidade e confiança desde o primeiro deploy.</p>
                     <div class="hero-ctas">
-                        <a class="btn-primary" href="https://compared-reactions-took-rangers.trycloudflare.com/" target="_blank" rel="noopener">Começar agora</a>
+                        <a class="btn-primary" href="https://neither-rescue-feature-tremendous.trycloudflare.com/" target="_blank" rel="noopener">Começar agora</a>
                         <a class="btn-ghost" href="#planos">Ver planos</a>
                     </div>
                     <div class="hero-stats">
@@ -1091,31 +1087,31 @@
         <section id="planos" class="pricing">
             <div class="container">
                 <h2 class="section-title">Planos flexíveis para cada estágio do seu produto</h2>
-                <p class="section-subtitle">Do primeiro deploy à expansão global, escolha o plano que combina performance, governança e suporte premium.</p>
+                <p class="section-subtitle">Comece em minutos com o plano gratuito de experimentação ou contrate a solução premium para workloads críticos com alto volume.</p>
                 <div class="pricing-grid">
                     <article class="price-card">
-                        <div class="tag">Start</div>
-                        <h3>Launch</h3>
-                        <div class="price">R$ 599<span>/mês</span></div>
+                        <span class="tag">Ideal para testes</span>
+                        <h3>Plano Free Launch</h3>
+                        <p class="price">R$ 0<span>/48 horas</span></p>
                         <ul>
-                            <li>Ambientes isolados para staging e produção</li>
-                            <li>Pipeline CI/CD com templates otimizados</li>
-                            <li>Monitoramento básico com alertas por e-mail</li>
-                            <li>Suporte em horário comercial</li>
+                            <li>Deploy imediato com link público temporário</li>
+                            <li>Hospedagem ativa por 48h com 25MB</li>
+                            <li>Integração com GitHub Actions e GitLab CI</li>
+                            <li>Suporte comunitário e base de conhecimento</li>
                         </ul>
-                        <a class="btn-ghost" href="https://compared-reactions-took-rangers.trycloudflare.com/" target="_blank" rel="noopener">Falar com vendas</a>
+                        <a class="btn-ghost" href="https://neither-rescue-feature-tremendous.trycloudflare.com/" target="_blank" rel="noopener">Iniciar gratuitamente</a>
                     </article>
                     <article class="price-card premium">
-                        <div class="tag">Mais popular</div>
-                        <h3>Scale</h3>
-                        <div class="price">R$ 1.799<span>/mês</span></div>
+                        <span class="tag">Escolha das equipes enterprise</span>
+                        <h3>Plano Premium Scale</h3>
+                        <p class="price">R$ 165<span>/mês</span></p>
                         <ul>
-                            <li>Deploy multi-região com roteamento inteligente</li>
-                            <li>Observabilidade completa com APM e tracing</li>
-                            <li>Gestão de segredos e auditoria de acessos</li>
-                            <li>Suporte 24/7 com SLA de 1h</li>
+                            <li>Hospedagem ilimitada com 89 GB de armazenamento cloud</li>
+                            <li>Projetos simultâneos, ambientes de staging e produção</li>
+                            <li>Suporte humano 24/7 com SLA de 15 minutos</li>
+                            <li>Relatórios executivos, auditoria e governança avançada</li>
                         </ul>
-                        <a class="btn-primary" href="https://compared-reactions-took-rangers.trycloudflare.com/" target="_blank" rel="noopener">Contratar agora</a>
+                        <a class="btn-primary" href="https://neither-rescue-feature-tremendous.trycloudflare.com/" target="_blank" rel="noopener">Contratar agora</a>
                     </article>
                 </div>
             </div>
@@ -1188,7 +1184,7 @@
                     <p>Nossa equipe está preparada para conectar seu time a uma jornada premium. Receba uma consultoria personalizada e descubra como reduzir custos e acelerar entregas.</p>
                     <div class="cta-actions">
                         <a class="btn-primary" href="mailto:discovervs24@gmail.com">Agendar conversa</a>
-                        <a class="btn-ghost" href="https://compared-reactions-took-rangers.trycloudflare.com/" target="_blank" rel="noopener">Acessar painel</a>
+                        <a class="btn-ghost" href="https://neither-rescue-feature-tremendous.trycloudflare.com/" target="_blank" rel="noopener">Acessar painel</a>
                     </div>
                 </div>
             </div>
@@ -1200,7 +1196,7 @@
             <div class="footer-grid">
                 <div class="footer-brand">
                     <div class="brand" style="font-size: 1rem;">
-                        <img src="https://compared-reactions-took-rangers.trycloudflare.com/logo.png" alt="Discover Cloud" />
+                        <img src="https://i.ibb.co/21HWwywW/Gemini-Generated-Image-47non947non947no.png" alt="Discover Cloud" />
                         Discover Cloud
                     </div>
                     <p>Infraestrutura premium com foco em segurança, observabilidade e escala. Somos seu parceiro para operar aplicações críticas na nuvem.</p>
@@ -1215,7 +1211,7 @@
                 <div class="footer-links">
                     <strong>Contato</strong>
                     <a href="mailto:discovervs24@gmail.com">discovervs24@gmail.com</a>
-                    <a href="https://compared-reactions-took-rangers.trycloudflare.com/" target="_blank" rel="noopener">Painel de acesso</a>
+                    <a href="https://neither-rescue-feature-tremendous.trycloudflare.com/" target="_blank" rel="noopener">Painel de acesso</a>
                 </div>
             </div>
             <div class="footer-meta">
